# WeChatClient

./: .gitignore  CMakeLists.txt  README.md
include/: chat.h  client_auth.h  config.h  unix_chat.h  unix_client.h  windows_client.h
include/ui/: chat_ui.h
src/: Client.cpp  chat.cpp  client_auth.cpp  config.cpp  main.cpp  unix_chat.cpp  unix_client.cpp  windows_client.cpp
src/ui/: auth_screens.cpp  chat_screen.cpp  chat_ui.cpp  menu_screen.cpp
